Step 6: Proximum memory backend
Implements a real MemoryBackend using org.replikativ/proximum.

- Adds kschltz.agent.memory.proximum-backend with hybrid recall
  (recent-N scan + semantic HNSW), session isolation, and close/sync.
- Wires :impl :proximum into kschltz.agent.system/init-key.
- Updates compose-context to extract :content from recalled map messages.
- Adds JVM flags for Vector API / FFM to deps.edn :test, build.clj
  test/uber tasks, and the uberjar launcher.
- Adds resources/lateralus/proximum-example.edn.
- Adds unit + integration tests; 137 tests, 350 assertions, all green.
- Updates docs: memory-v2.md, architecture.md, README.md,
  AGENT_INSTRUCTIONS.md, CHANGELOG.md.